--- a/PingTool/Styles/Page.xaml
+++ b/PingTool/Styles/Page.xaml
@@ -1,9 +1,7 @@
-﻿<ResourceDictionary
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <Style TargetType="Page" x:Key="PageStyle">
-        <Setter Property="Background" Value="{ThemeResource ApplicationPageBackgroundThemeBrush}" />
+    <Style x:Key="PageStyle" TargetType="Page">
+        <Setter Property="Background" Value="Transparent" />
     </Style>
 
 </ResourceDictionary>
