--- a/PingTool/Views/ShellPage.xaml
+++ b/PingTool/Views/ShellPage.xaml
@@ -2,65 +2,71 @@
     x:Class="PingTool.Views.ShellPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:i="using:Microsoft.Xaml.Interactivity"
     xmlns:behaviors="using:PingTool.Behaviors"
-    xmlns:winui="using:Microsoft.UI.Xaml.Controls"
-    xmlns:helpers="using:PingTool.Helpers"
-    xmlns:views="using:PingTool.Views"
-    Loaded="OnLoaded"
     xmlns:converters="using:Microsoft.Toolkit.Uwp.UI.Converters"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:helpers="using:PingTool.Helpers"
+    xmlns:i="using:Microsoft.Xaml.Interactivity"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:views="using:PingTool.Views"
+    xmlns:winui="using:Microsoft.UI.Xaml.Controls"
+    Loaded="OnLoaded"
     mc:Ignorable="d">
 
     <Page.Resources>
-        <converters:BoolToVisibilityConverter x:Name="ReverseBoolToVisibility" FalseValue="Visible" TrueValue="Collapsed" />
+        <converters:BoolToVisibilityConverter
+            x:Name="ReverseBoolToVisibility"
+            FalseValue="Visible"
+            TrueValue="Collapsed" />
         <converters:BoolNegationConverter x:Name="BoolNegationConverter" />
     </Page.Resources>
 
     <winui:NavigationView
         x:Name="navigationView"
+        Background="{ThemeResource SystemControlAcrylicWindowBrush}"
         IsBackButtonVisible="Visible"
         IsBackEnabled="{x:Bind IsBackEnabled, Mode=OneWay}"
-        SelectedItem="{x:Bind Selected, Mode=OneWay}"
-        ItemInvoked="OnItemInvoked"
         IsSettingsVisible="True"
-        Background="{ThemeResource SystemControlBackgroundAltHighBrush}">
+        ItemInvoked="OnItemInvoked"
+        SelectedItem="{x:Bind Selected, Mode=OneWay}">
         <winui:NavigationView.MenuItems>
             <!--
-            TODO WTS: Change the symbols for each item as appropriate for your app
-            More on Segoe UI Symbol icons: https://docs.microsoft.com/windows/uwp/style/segoe-ui-symbol-font
-            Or to use an IconElement instead of a Symbol see https://github.com/Microsoft/WindowsTemplateStudio/blob/release/docs/UWP/projectTypes/navigationpane.md
-            Edit String/en-US/Resources.resw: Add a menu item title for each page
+                TODO WTS: Change the symbols for each item as appropriate for your app
+                More on Segoe UI Symbol icons: https://docs.microsoft.com/windows/uwp/style/segoe-ui-symbol-font
+                Or to use an IconElement instead of a Symbol see https://github.com/Microsoft/WindowsTemplateStudio/blob/release/docs/UWP/projectTypes/navigationpane.md
+                Edit String/en-US/Resources.resw: Add a menu item title for each page
             -->
-            <winui:NavigationViewItem x:Uid="Shell_Main" Icon="Document" helpers:NavHelper.NavigateTo="views:MainPage" />
+            <winui:NavigationViewItem
+                x:Uid="Shell_Main"
+                helpers:NavHelper.NavigateTo="views:MainPage"
+                Icon="Play" />
         </winui:NavigationView.MenuItems>
-        <i:Interaction.Behaviors>
-            <behaviors:NavigationViewHeaderBehavior
-                DefaultHeader="{x:Bind Selected.Content, Mode=OneWay}">
+        <!--<i:Interaction.Behaviors>
+            <behaviors:NavigationViewHeaderBehavior DefaultHeader="{x:Bind Selected.Content, Mode=OneWay}">
                 <behaviors:NavigationViewHeaderBehavior.DefaultHeaderTemplate>
                     <DataTemplate>
                         <Grid>
                             <TextBlock
-                                Text="{Binding}"
+                                Margin="{StaticResource SmallLeftRightMargin}"
                                 Style="{ThemeResource TitleTextBlockStyle}"
-                                Margin="{StaticResource SmallLeftRightMargin}" />
+                                Text="{Binding}" />
                         </Grid>
                     </DataTemplate>
                 </behaviors:NavigationViewHeaderBehavior.DefaultHeaderTemplate>
             </behaviors:NavigationViewHeaderBehavior>
-        </i:Interaction.Behaviors>
+        </i:Interaction.Behaviors>-->
         <winui:NavigationView.PaneFooter>
             <Grid>
                 <Button
                     x:Uid="Shell_UserInfoButton"
-                    Padding="0" Margin="0"
+                    Margin="0"
+                    Padding="0"
+                    HorizontalAlignment="Stretch"
+                    HorizontalContentAlignment="Left"
+                    Background="Transparent"
                     Click="OnUserProfile"
                     IsEnabled="{x:Bind IsBusy, Mode=OneWay, Converter={StaticResource BoolNegationConverter}}"
-                    Visibility="{x:Bind IsLoggedIn, Mode=OneWay}"
-                    Background="Transparent"
-                    HorizontalAlignment="Stretch"
-                    HorizontalContentAlignment="Left">
+                    Visibility="{x:Bind IsLoggedIn, Mode=OneWay}">
                     <Grid Height="40">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="38" />
@@ -77,21 +83,22 @@
                         </Ellipse>
                         <TextBlock
                             Grid.Column="1"
-                            Text="{x:Bind User.Name, Mode=OneWay}"
                             VerticalAlignment="Center"
                             Style="{ThemeResource BodyTextBlockStyle}"
+                            Text="{x:Bind User.Name, Mode=OneWay}"
                             Visibility="{x:Bind IsLoggedIn, Mode=OneWay}" />
                     </Grid>
                 </Button>
                 <Button
                     x:Uid="Shell_LoginButton"
-                    Padding="0" Margin="0"
+                    Margin="0"
+                    Padding="0"
+                    HorizontalAlignment="Stretch"
+                    HorizontalContentAlignment="Left"
+                    Background="Transparent"
                     Click="OnUserProfile"
                     IsEnabled="{x:Bind IsBusy, Mode=OneWay, Converter={StaticResource BoolNegationConverter}}"
-                    Visibility="{x:Bind IsLoggedIn, Mode=OneWay, Converter={StaticResource ReverseBoolToVisibility}}"
-                    Background="Transparent"
-                    HorizontalAlignment="Stretch"
-                    HorizontalContentAlignment="Left">
+                    Visibility="{x:Bind IsLoggedIn, Mode=OneWay, Converter={StaticResource ReverseBoolToVisibility}}">
                     <Grid Height="40">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="38" />
@@ -107,8 +114,8 @@
                             </Ellipse.Fill>
                         </Ellipse>
                         <TextBlock
-                            Grid.Column="1"
                             x:Uid="Shell_LogIn"
+                            Grid.Column="1"
                             VerticalAlignment="Center"
                             Style="{ThemeResource BodyTextBlockStyle}"
                             Visibility="{x:Bind IsLoggedIn, Mode=OneWay, Converter={StaticResource ReverseBoolToVisibility}}" />
