--- a/PingTool/Views/ShellPage.xaml
+++ b/PingTool/Views/ShellPage.xaml
@@ -40,21 +40,12 @@
                 x:Uid="Shell_Main"
                 helpers:NavHelper.NavigateTo="views:MainPage"
                 Icon="Play" />
+            <winui:NavigationViewItem
+                x:Uid="Shell_DataUsage"
+                helpers:NavHelper.NavigateTo="views:DataUsagePage"
+                Icon="World" />
         </winui:NavigationView.MenuItems>
-        <!--<i:Interaction.Behaviors>
-            <behaviors:NavigationViewHeaderBehavior DefaultHeader="{x:Bind Selected.Content, Mode=OneWay}">
-                <behaviors:NavigationViewHeaderBehavior.DefaultHeaderTemplate>
-                    <DataTemplate>
-                        <Grid>
-                            <TextBlock
-                                Margin="{StaticResource SmallLeftRightMargin}"
-                                Style="{ThemeResource TitleTextBlockStyle}"
-                                Text="{Binding}" />
-                        </Grid>
-                    </DataTemplate>
-                </behaviors:NavigationViewHeaderBehavior.DefaultHeaderTemplate>
-            </behaviors:NavigationViewHeaderBehavior>
-        </i:Interaction.Behaviors>-->
+
         <winui:NavigationView.PaneFooter>
             <Grid>
                 <Button
